style: fix education overlap with skills

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,3 @@
-#buts {
-  background-color: #4CAF50;
-}
 
 #centerpic {
   display: block;
@@ -36,8 +33,10 @@ li#links{
 }
 
 #move{
-  padding-top: 18px;
-  float: left;
+  position: relative;
+  float:left;
+  top: 60px;
+  right: 75px;
 }
 
 body {
@@ -56,7 +55,7 @@ aside .inner, main .inner {
   padding: 20px;
 }
 main .inner {
-  padding-bottom: 250px;
+  padding-bottom: 325px;
 }
 
 h1 {
